[tool.poetry]
name = "pine"
version = "0.1.0"
description = ""
authors = ["DumbassNamedTuna <50528857+Bluefin-Tuna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.5"
Flask-PyMongo = "2.3.0"
requests = "2.31.0"
octoai-sdk = "0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
